# rwig

./: .Rbuildignore  .gitattributes  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cleanup.win  config.status  configure  configure.ac  configure~  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  rwig.Rproj  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  barycenter.R  check_args.R  check_cuda.R  cpp11.R  data.R  rwig-package.R  sinkhorn.R  specs.R  tsvd.R  utils.R  wdl.R  wig-package.R  wig.R  zzz.R
articles/: barycenter.html  barycenter.md  cuda.html  cuda.md  gradient.html  gradient.md  index.html  index.md  sinkhorn.html  sinkhorn.md  specs.html  specs.md  threading.html  threading.md  tsvd.html  tsvd.md  wdl-model.html  wdl-model.md  wig-model.html  wig-model.md
autom4te.cache/: output.0  requests  traces.0
data/: headlines.rda
data-raw/: a.out  check_cuda  check_cuda.cpp  nvblas.conf  prepare_headlines.R  test.R  test_arma.cpp  test_arma_mac.cpp  test_barycenter.jl  test_perf.R  test_sinkhorn.jl
data-raw/experimental/: callgrind.out.124009  callgrind.out.128059  perf.data.old  test_arma.cpp  test_arma_eachcol.cpp  test_perf.R  test_print.cpp  (+4 more)
man/: barycenter.Rd  check_barycenter_args.Rd  check_cuda.Rd  check_sinkhorn_args.Rd  headlines.Rd  rwig-package.Rd  sinkhorn.Rd  tsvd.Rd  wdl.Rd  wdl_specs.Rd  wig-package.Rd  wig.Rd
news/: index.html  index.md
reference/: barycenter.html  barycenter.md  check_barycenter_args.html  check_cuda.html  check_cuda.md  check_sinkhorn_args.html  headlines.html  headlines.md  hello.html  index.html  index.md  print.wdl.html  rwig-package.html  rwig-package.md  rwig.html  sinkhorn.html  sinkhorn.md  summary.wig.html  tsvd.html  tsvd.md  wdl.character.html  wdl.html  wdl.md  wdl_specs.html  wdl_specs.md  wig-package.html  wig-package.md  wig.data.frame.html  wig.html  wig.md  wig_specs.html
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  barycenter.cpp  barycenter.h  barycenter_impl_log.cpp  barycenter_impl_parallel.cpp  check_cuda.cpp  cpp11.cpp  cuda_barycenter.cu  cuda_kernels.cu  cuda_optimizer.cu  cuda_sinkhorn.cu  cuda_wdl.cu  optimizer.h  sinkhorn.cpp  sinkhorn.h  sinkhorn_impl_log.cpp  sinkhorn_impl_vanilla.cpp  tsvd.cpp  utils.cpp  utils.h  wdl.cpp  wdl.h  wdl_impl.cpp  wdl_impl.hpp
tests/: tinytest.R
vignettes/: barycenter.Rmd  cuda.Rmd  gradient.Rmd  sinkhorn.Rmd  specs.Rmd  threading.Rmd  tsvd.Rmd  wdl-model.Rmd  wig-model.Rmd
(+62 files in other folders)
